--- a/asking/templates/asking/answers.html
+++ b/asking/templates/asking/answers.html
@@ -28,7 +28,7 @@
                     <div class="col-2">
                         <img class="rounded-circle m-2" src="/{{ b.answerer_name.account.user_avatar }}" style = "width: 120px">
                         <br>
-                        <p class="text-center font-weight-bold">{{b.answerer_name}}</p>
+                        <p class="text-center" style="font-weight:bold; font-size:20px">{{b.answerer_name}}</p>
                     </div>
                     <div class="col-10">
                         <div class="row">
@@ -104,7 +104,7 @@
                     <div class="col-2">
                         <img class="rounded-circle m-2" src="/{{ b.answerer_name.account.user_avatar }}" style = "width: 120px">
                         <br>
-                        <p class="text-center font-weight-bold">{{b.answerer_name}}</p>
+                        <p class="text-center" style="font-weight:bold; font-size:20px">{{b.answerer_name}}</p>
                     </div>
                     <div class="col-10">
                         <div class="row">
@@ -113,7 +113,7 @@
                             </div>
                             <div class="col-2">
                                 {% if quest.asker_name == user %}
-                                    <div class="right-button" data-ans="{{ b.id }}" answer="right">
+                                    <div class="right_button" data-ans="{{ b.id }}" answer="right">
                                         <button class="btn btn-success" type="submit"><p style="color:white">Верно!</p></button>
                                     </div>
                                 {% endif %}
